# pm_opencv_plugin

./: README.md  pubspec.yaml
android/: CMakeLists.txt  build.gradle  settings.gradle
android/include/tesseract3/: tesscallback.h
android/ocrTrainedData/: CMakeLists.txt  tessTrain.h.in
android/src/main/: AndroidManifest.xml
android/src/main/java/com/bowoo/pm_opencv_plugin/: MrzReader.java  PmOpencvPlugin.java  PrepareMrzResult.java
assets/fast/: mrz.traineddata
example/: README.md  pubspec.yaml
example/android/: settings.gradle
example/android/app/: build.gradle
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart  plugin_test.dart  theme.dart
example/lib/pages/: homePage.dart  scannerPage.dart
example/lib/util/: util.dart
example/lib/widget/: document_stack.dart  passportModal.dart
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner.xcodeproj/: project.pbxproj
example/test/: widget_test.dart
example/web/: index.html  manifest.json
example/windows/: CMakeLists.txt
example/windows/runner/: Runner.rc  (+1 more)
ios/: pm_opencv_plugin.podspec
ios/Classes/: PmOpencvPlugin.h  PmOpencvPlugin.m  SwiftPmOpencvPlugin.swift
lib/: convert.dart  cv_mrz_roi.dart  cv_plugin.dart  pm_opencv_plugin.dart  pm_opencv_plugin_method_channel.dart  pm_opencv_plugin_platform_interface.dart  pm_opencv_plugin_web.dart
lib/Exception/: exception.dart
lib/bak/: camera_img_ext.dart.bak  image_ffi.dart.bak  img_proc_handler.dart.bak  mich_image_model.dart.bak  mix_handler.dart.bak
lib/controller/: camera_img_ext.dart  image_ffi.dart  img_proc_handler.dart  mix_handler.dart  model_extension.dart  proc_ffi.dart  processor.dart
lib/globals/: err_msg.dart
lib/model/: frame_for_process.dart  image_model.dart  mich_image_model.dart  mrz.dart  process_argument.dart  process_result.dart
lib/type_def/: typedef.dart
macos/: pm_opencv_plugin.podspec
macos/Classes/: PmOpencvPlugin.swift
test/: pm_opencv_plugin_method_channel_test.dart  pm_opencv_plugin_test.dart
windows/: CMakeLists.txt  pm_opencv_plugin.cpp  pm_opencv_plugin.h  pm_opencv_plugin_c_api.cpp
(+49 files in other folders)
